@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - Decrement becomes self increment #74
 - Send statistic
+- Cant save config and restore #73
 
 1.8.6 / October 12, 2017
 [Alexandr Topilski]
