@@ -63,7 +63,7 @@ namespace gui {
 
 namespace {
 BaseShell* makeBaseShell(core::connectionTypes type, QWidget* parent) {
-  BaseShell* shell = BaseShell::createFromType(type, proxy::SettingsManager::GetInstance().GetAutoCompletion());
+  BaseShell* shell = BaseShell::createFromType(type, proxy::SettingsManager::GetInstance()->GetAutoCompletion());
   parent->setToolTip(QObject::tr("Based on <b>%1</b> version: <b>%2</b>").arg(shell->basedOn(), shell->version()));
   shell->setContextMenuPolicy(Qt::CustomContextMenu);
   return shell;
