@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - [Redis] Decrement becomes self increment #74
 - Send statistic
+- Cant save config and restore #73
 
 1.9.3 / October 12, 2017
 [Alexandr Topilski]
